--- a/veracode.yml
+++ b/veracode.yml
@@ -1,3 +1,19 @@
+actions:
+  ruby:
+    version: 3.2.2
+    bundle: 2.4.6
+  veracode_static_scan:
+    build:
+      runs_on:
+      packager_image: veracode/scm-packaging:3.0.0
+      predependency_command: |
+        
+  veracode_sca_scan:
+    build:
+      runs_on:
+      packager_image:
+      predependency_command: |
+      
 veracode_static_scan:
   push:
     trigger: true
@@ -37,13 +53,6 @@ veracode_static_scan:
     trigger: false
     commands:
       - "Veracode Static Scan"
-  #Ruby Support
-  actions_packager_image: janthony1986/scm-packaging:1.2.3
-  ruby_version: '3.3.3'
-  bundle_version: '2.5.7'
-  #build_predependency_command: |
-    
-    
 
 veracode_sca_scan:
   push:
@@ -82,7 +91,7 @@ veracode_iac_secrets_scan:
       - '*'
     branches_to_exclude:
   pull_request:
-    trigger: false
+    trigger: true
     action:
       - opened
       - synchronize
